# eddington-matplotlib

./: .bumpversion.cfg  .coveragerc  setup.cfg  setup.py  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
examples/: free_fall.json  optics.json  viscosity.json
src/eddington/matplotlib/: __init__.py  configuration.py  data.py  fitting.py  residuals.py
src/eddington_matplotlib/: __init__.py  __main__.py  all.py  data.py  fitting.py  output_configuration.py  plot_configuration.py  residuals.py  util.py
src/test/: base_test_cases.py  plot_base_test_case.py  test_get_plot_borders.py  test_output_configuration.py  test_plot_all.py  test_plot_configuration.py  test_plot_data.py  test_plot_fitting.py  test_plot_residuals.py
test/: base_test_cases.py  test_output_configuration.py  test_plot_all.py  test_plot_data.py  test_plot_residuals.py
tests/: base_test_cases.py  test_output_configuration.py  test_plot_all.py  test_plot_configuration.py  test_plot_data.py  test_plot_fitting.py  test_plot_residuals.py  test_show_or_export.py
tests/configurations/: test_get_plot_borders.py  test_output_configuration.py  test_plot_configuration.py
tests/plot/: __init__.py  conftest.py  plot_cases.py  test_plot_all.py  test_plot_data.py  test_plot_fitting.py  test_plot_residuals.py
