[metadata]
name = eddington-matplotlib
author = Sagi Shadur
author_email = saroad2@gmail.com
maintainer = Sagi Shadur
maintainer_email = saroad2@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
license = Apache License
license_file = LICENSE
description = A laboratory utility library for fitting and presenting data
keywords =
    laboratory
    fitting
    plotting
    matplotlib
    eddington
    data
platforms = any

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    = src
install_requires =
    eddington >= 0.0.9
    matplotlib >= 3.3.0
    numpy >= 1.19.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    eddington-plot = eddington_matplotlib.__main__:main
